--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <div>
         <img src="logo.png" style="display:block ; margin: auto; margin-top:50px">
         <h1 style="text-align: center; margin: 50px; font-size: 50px">WELCOME TO TVC GAME</h1>
+        <h5 style="text-align: center; margin: 30px; font-size: 12px"><a href="https://sites.google.com/view/tvc-privacy-policy/">Privacy Policy</a>.|.<a href="https://play.google.com/store/apps/dev?id=4786441743261681600">TVC Google Store</a></h5>
     </div>
 </body>
 
