--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <h1 style="text-align: center; margin: 50px; font-size: 50px">WELCOME TO TVC GAME</h1>
         <h3 style="text-align: center; margin: 30px;"><a href="https://sites.google.com/view/tvc-privacy-policy/">Privacy Policy</a>.|.<a href="https://play.google.com/store/apps/dev?id=4786441743261681600">TVC Google Store</a></h3>
     </div>
+    <div class="copyright">
+        &copy; Copyright <strong><span>TVC Global</span></strong>. All Rights Reserved
+      </div>
 </body>
 
 </html>
